# vscode

./: .gitignore
C++/: main  main.c  main.cpp  mario  mario.c++
C++/main.dSYM/Contents/Resources/DWARF/: main
C++/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
Python/: .gitignore  call_log.txt  lab1-4.py  lab1-5.py  lab1-6.py  lab1-7.py  lab2-main.py  lab3.py  lab4.py  lab5-1.py  lab5-2.py  lab5-3.py  lab5-4.py  lab5-5.py  lab5-6.py  lab5-7.py  lab5-8.py  lab6.py  lab7-1.py  lab7-2.py  user_info.txt
cmake_project/: CMakeLists.txt  main.cpp  math.cpp  math.h
draft/: main.cpp
草稿/: main  再试试.md
